--- a/app/src/main/res/layout/food_card.xml
+++ b/app/src/main/res/layout/food_card.xml
@@ -17,6 +17,7 @@
         app:layout_constraintStart_toStartOf="@id/guideline_start"
         app:layout_constraintEnd_toEndOf="@id/guideline_end"
         app:cardCornerRadius="10dp"
+        android:id="@+id/food_card"
         >
 
         <androidx.constraintlayout.widget.ConstraintLayout
