--- a/app/src/main/res/navigation/app_nav.xml
+++ b/app/src/main/res/navigation/app_nav.xml
@@ -7,7 +7,19 @@
 
     <fragment
         android:id="@+id/productsListFragment"
-        android:name="stanojevic.kotlin.ProductDetailsFragment"
+        android:name="stanojevic.kotlin.ProductsListFragment"
         android:label="fragment_products_list"
-        tools:layout="@layout/fragment_products_list" />
+        tools:layout="@layout/fragment_products_list" >
+        <action
+            android:id="@+id/action_productsListFragment_to_productDetailsFragment"
+            app:destination="@id/productDetailsFragment" />
+    </fragment>
+    <fragment
+        android:id="@+id/productDetailsFragment"
+        android:name="stanojevic.kotlin.ProductDetailsFragment"
+        android:label="ProductDetailsFragment" >
+        <argument
+            android:name="product"
+            app:argType="stanojevic.kotlin.Product" />
+    </fragment>
 </navigation>
