--- a/app/src/main/res/layout/food_card.xml
+++ b/app/src/main/res/layout/food_card.xml
@@ -1,24 +1,19 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="match_parent"
-    android:layout_height="wrap_content"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:orientation="vertical"
-    android:paddingBottom="15dp"
-    android:paddingTop="15dp"
-    android:background="#F1F1F1"
-    >
-
-    <androidx.cardview.widget.CardView
-        android:layout_width="0dp"
-        android:layout_height="match_parent"
-        android:layout_gravity="center"
-        app:layout_constraintStart_toStartOf="@id/guideline_start"
-        app:layout_constraintEnd_toEndOf="@id/guideline_end"
-        app:cardCornerRadius="10dp"
+ <androidx.cardview.widget.CardView
+        xmlns:android="http://schemas.android.com/apk/res/android"
+        xmlns:tools="http://schemas.android.com/tools"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        xmlns:app="http://schemas.android.com/apk/res-auto"
         android:id="@+id/food_card"
-        >
+        android:layout_gravity="center"
+        android:clickable="true"
+        android:focusable="true"
+        app:cardCornerRadius="10dp"
+        app:layout_constraintEnd_toEndOf="@id/guideline_end"
+        app:layout_constraintStart_toStartOf="@id/guideline_start"
+        tools:layout_editor_absoluteY="15dp"
+        android:layout_marginBottom="20dp">
 
         <androidx.constraintlayout.widget.ConstraintLayout
             android:layout_width="match_parent"
@@ -29,52 +24,48 @@
                 android:id="@+id/imageView"
                 android:layout_width="match_parent"
                 android:layout_height="300dp"
-                app:layout_constraintTop_toTopOf="parent"
                 android:scaleType="centerCrop"
-                />
+                app:layout_constraintTop_toTopOf="parent" />
 
             <TextView
                 android:id="@+id/title"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
-                app:layout_constraintStart_toStartOf="@id/cardguideline_start"
-                app:layout_constraintEnd_toEndOf="@id/cardguideline_end"
-                app:layout_constraintTop_toBottomOf="@id/imageView"
-                android:textSize="20sp"
                 android:layout_marginTop="10dp"
-                android:textStyle="bold"
                 android:text="@string/product_title"
-                />
+                android:textSize="20sp"
+                android:textStyle="bold"
+                app:layout_constraintEnd_toEndOf="@id/cardguideline_end"
+                app:layout_constraintStart_toStartOf="@id/cardguideline_start"
+                app:layout_constraintTop_toBottomOf="@id/imageView" />
 
             <TextView
                 android:id="@+id/subtitle"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
-                app:layout_constraintStart_toStartOf="@id/cardguideline_start"
-                app:layout_constraintEnd_toEndOf="@id/cardguideline_end"
-                app:layout_constraintTop_toBottomOf="@id/title"
-                android:textStyle="bold"
                 android:text="@string/product_subTitle"
-                />
+                android:textStyle="bold"
+                app:layout_constraintEnd_toEndOf="@id/cardguideline_end"
+                app:layout_constraintStart_toStartOf="@id/cardguideline_start"
+                app:layout_constraintTop_toBottomOf="@id/title" />
 
             <ImageView
                 android:layout_width="wrap_content"
                 android:layout_height="30dp"
-                app:layout_constraintTop_toBottomOf="@id/imageView"
-                app:layout_constraintEnd_toEndOf="@id/cardguideline_end"
-                android:layout_marginEnd="10dp"
                 android:layout_marginTop="10dp"
-                app:srcCompat="@drawable/ic_nav_bar_bookmarks"
-                />
+                android:layout_marginEnd="10dp"
+                app:layout_constraintEnd_toEndOf="@id/cardguideline_end"
+                app:layout_constraintTop_toBottomOf="@id/imageView"
+                app:srcCompat="@drawable/ic_nav_bar_bookmarks" />
 
             <ImageView
                 android:id="@+id/rank_logo"
                 android:layout_width="wrap_content"
                 android:layout_height="0dp"
-                app:srcCompat="@drawable/ic_ranking"
+                android:layout_marginTop="10dp"
                 app:layout_constraintStart_toStartOf="@id/cardguideline_start"
                 app:layout_constraintTop_toBottomOf="@id/subtitle"
-                android:layout_marginTop="10dp"
+                app:srcCompat="@drawable/ic_ranking"
 
                 />
 
@@ -82,25 +73,24 @@
                 android:id="@+id/nutrition_score"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                app:layout_constraintHorizontal_bias="0.03"
-                app:layout_constraintTop_toBottomOf="@id/subtitle"
-                app:layout_constraintStart_toEndOf="@id/rank_logo"
-                app:layout_constraintEnd_toEndOf="@id/cardguideline_end"
                 android:layout_marginTop="10dp"
-
                 android:text="@string/nutriscore_e_desc"
-                />
+                app:layout_constraintEnd_toEndOf="@id/cardguideline_end"
+                app:layout_constraintHorizontal_bias="0.03"
+                app:layout_constraintStart_toEndOf="@id/rank_logo"
+
+                app:layout_constraintTop_toBottomOf="@id/subtitle" />
 
             <ImageView
                 android:id="@+id/calory_logo"
                 android:layout_width="wrap_content"
                 android:layout_height="0dp"
-                app:srcCompat="@drawable/ic_calories"
+                android:layout_marginTop="10dp"
                 app:layout_constraintHorizontal_bias="0.2"
                 app:layout_constraintLeft_toRightOf="@id/nutrition_score"
                 app:layout_constraintRight_toLeftOf="@id/cardguideline_end"
                 app:layout_constraintTop_toBottomOf="@id/subtitle"
-                android:layout_marginTop="10dp"
+                app:srcCompat="@drawable/ic_calories"
 
                 />
 
@@ -108,13 +98,12 @@
                 android:id="@+id/calory_score"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                app:layout_constraintHorizontal_bias="0.03"
-                app:layout_constraintTop_toBottomOf="@id/subtitle"
-                app:layout_constraintStart_toEndOf="@id/calory_logo"
-                app:layout_constraintEnd_toEndOf="@id/cardguideline_end"
                 android:layout_marginTop="10dp"
                 android:text="@string/nutriscore_e_desc"
-                />
+                app:layout_constraintEnd_toEndOf="@id/cardguideline_end"
+                app:layout_constraintHorizontal_bias="0.03"
+                app:layout_constraintStart_toEndOf="@id/calory_logo"
+                app:layout_constraintTop_toBottomOf="@id/subtitle" />
 
 
             <androidx.constraintlayout.widget.Guideline
@@ -133,21 +122,3 @@
 
         </androidx.constraintlayout.widget.ConstraintLayout>
     </androidx.cardview.widget.CardView>
-
-
-    <androidx.constraintlayout.widget.Guideline
-        android:id="@+id/guideline_start"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:orientation="vertical"
-        app:layout_constraintGuide_begin="20dp" />
-
-    <androidx.constraintlayout.widget.Guideline
-        android:id="@+id/guideline_end"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:orientation="vertical"
-        app:layout_constraintGuide_end="20dp" />
-
-
-</androidx.constraintlayout.widget.ConstraintLayout>
