--- a/app/src/main/res/layout/fragment_product_details_nutritional_table.xml
+++ b/app/src/main/res/layout/fragment_product_details_nutritional_table.xml
@@ -50,7 +50,7 @@
                 android:layout_weight="0.25"
                 android:layout_height="wrap_content"
                 android:textAlignment="center"
-                android:text="Par portion"
+                android:text="Portion"
                 android:textSize="18sp"
                 android:textStyle="bold"
                 android:paddingVertical="20dp"
@@ -77,7 +77,7 @@
                 app:border="right|bottom|left" />
 
             <stanojevic.kotlin.TableCellView
-                android:id="@+id/energy"
+                android:id="@+id/energy100"
                 android:layout_width="0dp"
                 android:layout_weight="0.25"
                 android:layout_height="match_parent"
@@ -90,6 +90,7 @@
             </stanojevic.kotlin.TableCellView>
 
             <stanojevic.kotlin.TableCellView
+                android:id="@+id/energy"
                 android:layout_width="0dp"
                 android:layout_weight="0.25"
                 android:layout_height="match_parent"
@@ -122,7 +123,7 @@
             </stanojevic.kotlin.TableCellView>
 
             <stanojevic.kotlin.TableCellView
-                android:id="@+id/grasses"
+                android:id="@+id/grasses100"
                 android:layout_width="0dp"
                 android:layout_weight="0.25"
                 android:layout_height="match_parent"
@@ -135,6 +136,7 @@
             </stanojevic.kotlin.TableCellView>
 
             <stanojevic.kotlin.TableCellView
+                android:id="@+id/grasses"
                 android:layout_width="0dp"
                 android:layout_weight="0.25"
                 android:layout_height="match_parent"
@@ -167,7 +169,7 @@
             </stanojevic.kotlin.TableCellView>
 
             <stanojevic.kotlin.TableCellView
-                android:id="@+id/acide"
+                android:id="@+id/acide100"
                 android:layout_width="0dp"
                 android:layout_weight="0.25"
                 android:layout_height="match_parent"
@@ -180,6 +182,7 @@
             </stanojevic.kotlin.TableCellView>
 
             <stanojevic.kotlin.TableCellView
+                android:id="@+id/acide"
                 android:layout_width="0dp"
                 android:layout_weight="0.25"
                 android:layout_height="match_parent"
@@ -212,7 +215,7 @@
             </stanojevic.kotlin.TableCellView>
 
             <stanojevic.kotlin.TableCellView
-                android:id="@+id/glucide"
+                android:id="@+id/glucide100"
                 android:layout_width="0dp"
                 android:layout_weight="0.25"
                 android:layout_height="match_parent"
@@ -225,6 +228,7 @@
             </stanojevic.kotlin.TableCellView>
 
             <stanojevic.kotlin.TableCellView
+                android:id="@+id/glucide"
                 android:layout_width="0dp"
                 android:layout_weight="0.25"
                 android:layout_height="match_parent"
@@ -257,7 +261,7 @@
             </stanojevic.kotlin.TableCellView>
 
             <stanojevic.kotlin.TableCellView
-                android:id="@+id/sucres"
+                android:id="@+id/sucres100"
                 android:layout_width="0dp"
                 android:layout_weight="0.25"
                 android:layout_height="match_parent"
@@ -270,6 +274,7 @@
             </stanojevic.kotlin.TableCellView>
 
             <stanojevic.kotlin.TableCellView
+                android:id="@+id/sucres"
                 android:layout_width="0dp"
                 android:layout_weight="0.25"
                 android:layout_height="match_parent"
@@ -302,7 +307,7 @@
             </stanojevic.kotlin.TableCellView>
 
             <stanojevic.kotlin.TableCellView
-                android:id="@+id/fibres"
+                android:id="@+id/fibres100"
                 android:layout_width="0dp"
                 android:layout_weight="0.25"
                 android:layout_height="match_parent"
@@ -315,6 +320,7 @@
             </stanojevic.kotlin.TableCellView>
 
             <stanojevic.kotlin.TableCellView
+                android:id="@+id/fibres"
                 android:layout_width="0dp"
                 android:layout_weight="0.25"
                 android:layout_height="match_parent"
@@ -347,7 +353,7 @@
             </stanojevic.kotlin.TableCellView>
 
             <stanojevic.kotlin.TableCellView
-                android:id="@+id/proteins"
+                android:id="@+id/proteins100"
                 android:layout_width="0dp"
                 android:layout_weight="0.25"
                 android:layout_height="match_parent"
@@ -360,6 +366,7 @@
             </stanojevic.kotlin.TableCellView>
 
             <stanojevic.kotlin.TableCellView
+                android:id="@+id/proteins"
                 android:layout_width="0dp"
                 android:layout_weight="0.25"
                 android:layout_height="match_parent"
@@ -392,7 +399,7 @@
             </stanojevic.kotlin.TableCellView>
 
             <stanojevic.kotlin.TableCellView
-                android:id="@+id/sel"
+                android:id="@+id/sel100"
                 android:layout_width="0dp"
                 android:layout_weight="0.25"
                 android:layout_height="match_parent"
@@ -405,6 +412,7 @@
             </stanojevic.kotlin.TableCellView>
 
             <stanojevic.kotlin.TableCellView
+                android:id="@+id/sel"
                 android:layout_width="0dp"
                 android:layout_weight="0.25"
                 android:layout_height="match_parent"
@@ -437,7 +445,7 @@
             </stanojevic.kotlin.TableCellView>
 
             <stanojevic.kotlin.TableCellView
-                android:id="@+id/sodium"
+                android:id="@+id/sodium100"
                 android:layout_width="0dp"
                 android:layout_weight="0.25"
                 android:layout_height="match_parent"
@@ -450,6 +458,7 @@
             </stanojevic.kotlin.TableCellView>
 
             <stanojevic.kotlin.TableCellView
+                android:id="@+id/sodium"
                 android:layout_width="0dp"
                 android:layout_weight="0.25"
                 android:layout_height="match_parent"
