--- a/app/src/main/res/layout/fragment_product_details_summary.xml
+++ b/app/src/main/res/layout/fragment_product_details_summary.xml
@@ -9,7 +9,7 @@
     <ImageView
         android:id="@+id/imageView4"
         android:layout_width="match_parent"
-        android:layout_height="300dp"
+        android:layout_height="230dp"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintLeft_toLeftOf="parent"
@@ -37,8 +37,8 @@
 
     <ImageView
         android:id="@+id/imageView5"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="100dp"
+        android:layout_height="100dp"
         app:srcCompat="@drawable/ic_empty_saved"
         app:layout_constraintRight_toRightOf="@id/imageView4"
         app:layout_constraintTop_toBottomOf="@id/imageView4"
